change heading title.

--- a/resume.hbs
+++ b/resume.hbs
@@ -188,7 +188,7 @@
             <div class="detail" id="experience">
               <h3 class="text-uppercase">
                 <a class="anchor-link text-muted" href="#experience">
-                  <i aria-hidden="true" class="icon-lg icon-building"></i> Experience
+                  <i aria-hidden="true" class="icon-lg icon-building"></i> Summary of Relevant Professional Experience and Achievements
                   <span class="anchor-icon" aria-hidden="true"></span>
                 </a>
               </h3>
